--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+
+@import "@/styles/Navbar.scss";
+
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
