--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,3 +1,11 @@
+.disable-select {
+  user-select: none; /* supported by Chrome and Opera */
+ -webkit-user-select: none; /* Safari */
+ -khtml-user-select: none; /* Konqueror HTML */
+ -moz-user-select: none; /* Firefox */
+ -ms-user-select: none; /* Internet Explorer/Edge */
+}
+
 #sidebar {
   font-family: "Poppins", sans-serif;
   background: #f8f8f8;
